# mesaYA_mcp

./: .env.template  Dockerfile  README.md  pyproject.toml
docs/: MCP_TOOLS_REFERENCE.md
src/mesaYA_mcp/: __init__.py  __main__.py  gateway.py  server.py
src/mesaYA_mcp/features/: __init__.py
src/mesaYA_mcp/features/reservations/: __init__.py  tools.py
src/mesaYA_mcp/features/restaurants/: __init__.py  tools.py
src/mesaYA_mcp/mappers/: __init__.py
src/mesaYA_mcp/mappers/adapters/: __init__.py  toon_response_adapter.py
src/mesaYA_mcp/mappers/ports/: __init__.py
src/mesaYA_mcp/shared/: __init__.py
src/mesaYA_mcp/shared/application/: __init__.py  authorization_service.py  can_access_tool.py  require_access_decorator.py
src/mesaYA_mcp/shared/core/: __init__.py  config.py  configure_dependencies.py  container.py  get_http_client.py  get_logger.py  get_settings.py  settings.py
src/mesaYA_mcp/shared/domain/: __init__.py  access_level.py  access_level_hierarchy.py  authorization_error.py  current_context.py  get_current_context.py  get_required_access_level.py  has_access.py  reset_context.py  set_current_context.py  tool_context.py  tool_context_model.py  tool_permissions.py  tool_permissions_map.py
src/mesaYA_mcp/shared/infrastructure/: __init__.py
src/mesaYA_mcp/tools/: __init__.py  _formatters.py  get_allowed_tools.py  set_access_context.py
src/mesaYA_mcp/tools/ai/: __init__.py  analyze_menu_image.py
src/mesaYA_mcp/tools/dtos/: __init__.py
src/mesaYA_mcp/tools/menus/: __init__.py  _format.py  get_dish.py  get_menu.py  get_menu_analytics.py  list_menus.py  search_dishes.py
src/mesaYA_mcp/tools/payment/: __init__.py  cancel_payment.py  create_payment.py  (+1 more)
(+80 files in other folders)
