[project]
name = "mesaya-mcp"
version = "0.1.0"
description = "MCP server for MesaYA restaurant reservation platform"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=2.14.1",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
    "starlette>=0.38.0",
    "toon-format>=0.9.0b1",
]


[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"


[project.scripts]
app = "mesaYA_mcp.__main__:main"
gateway = "mesaYA_mcp.gateway:main"
