[project]
name = "mesaya-mcp"
version = "0.1.0"
description = "MCP server for MesaYA restaurant reservation platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.14.1",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
    "starlette>=0.38.0",
    "toon-format>=0.9.0b1",
    "mcp[cli]>=1.25.0",
    "langchain-google-genai>=4.1.3",
    "langchain-openai>=1.1.6",
    "langchain-groq>=1.1.1",
]


[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"


[project.scripts]
app = "mesaYA_mcp.__main__:main"
gateway = "mesaYA_mcp.gateway:main"
